plugins {
    id 'fabric-loom' version '1.9.2'
    id 'maven-publish'
}

base {
    archivesName = project.archives_base_name
}

version = project.mod_version
group = project.maven_group

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on unsigned mods; signed mods should be fetched from the default locations
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	testImplementation "org.junit.jupiter:junit-jupiter:5.10.2"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.10.2"
}

test {
	useJUnitPlatform()
}


processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21

	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	// If you want to use a different Java toolchain, you can specify it like this:
	// toolchain.languageVersion = JavaLanguageVersion.of(17)
}

jar {
    from("LICENSE") {
        rename { fileName -> "${fileName}_${base.archivesName.get()}" }
    }
}
// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice this section does NOT have repositories. By default artifacts are published to the local maven repository.
		// See https://docs.gradle.org/current/userguide/publishing_maven.html#publishing_repositories for more information.

		// Uncomment this to publish to the local maven
		// mavenLocal()
	}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"
}
